--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -327,6 +327,7 @@
 
 <div class="content" role="main">
 
+  <h1>JE TESTE LE SSR ANGULAR</h1>
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
